# electron-collider

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  collider-manifest.rc  package.json
commands/collider-cmd-bisect/: Cargo.toml
commands/collider-cmd-bisect/src/: errors.rs  lib.rs
commands/collider-cmd-new/: Cargo.toml
commands/collider-cmd-new/src/: lib.rs
commands/collider-cmd-new/src/templates/vanilla/: package.json
commands/collider-cmd-new/templates/quick-start/: esbuild.main.config.ts  index.html  main.js  package.json  preload.js  tsconfig.json
commands/collider-cmd-new/templates/quick-start/assets/icons/: electron-icon.icns
commands/collider-cmd-new/templates/quick-start/src/: index.html  main.js  preload.js
commands/collider-cmd-pack/: Cargo.toml
commands/collider-cmd-pack/src/: app.rs  lib.rs
commands/collider-cmd-start/: Cargo.toml
commands/collider-cmd-start/src/: errors.rs  lib.rs
crates/collider-command/: Cargo.toml
crates/collider-command/src/: lib.rs
crates/collider-common/: Cargo.toml
crates/collider-common/src/: lib.rs
crates/collider-config/: Cargo.toml
crates/collider-config-derive/: Cargo.toml
crates/collider-config-derive/src/: lib.rs
crates/collider-config/src/: lib.rs
crates/collider-electron/: Cargo.toml
crates/collider-electron/src/: errors.rs  lib.rs
crates/collider-node-semver/: Cargo.toml
crates/collider-node-semver/src/: lib.rs  range.rs
src/: lib.rs  main.rs
