[package]
name = "electron-collider"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    ".",
    "crates/*",
    "commands/*"
]

[dependencies]
# Commands
collider-cmd-pack = { path = "./commands/collider-cmd-pack" }

# Workspace deps
collider-command = { path = "./crates/collider-command" }
collider-common = { path = "./crates/collider-common" }

# Regular deps
fern = "0.6.0"
directories = "3.0.1"

[build-dependencies]
embed-resource = "1.3.3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'
