[package]
name = "collider-cmd-pack"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
collider-command = { path = "../../crates/collider-command" }
collider-common = { path = "../../crates/collider-common" }
collider-electron = { path = "../../crates/collider-electron" }

which = "4.2.2"
