[package]
name = "collider-cmd-start"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
collider-command = { path = "../../crates/collider-command" }
collider-common = { path = "../../crates/collider-common" }
collider-electron = { path = "../../crates/collider-electron" }

# Must be kept in sync with collider-common!!
serde = "1.0.126"

node-semver = "2.0.0"
