[package]
name = "collider-config"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
collider-common = { path = "../collider-common" }
collider-config-derive = { path = "../collider-config-derive" }

# False deps
clap = { git = "https://github.com/zkat/clap" }
serde = { version = "1.0.103", features = ["derive"] }

# True deps
config = { version = "0.9.3", features = ["toml"] }

[dev-dependencies]
anyhow = "1.0.24"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
